// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convert > deeplyCopy > should convert array of nodes 1`] = `
{
  "ambientModuleNames": undefined,
  "amdDependencies": [],
  "bindDiagnostics": [],
  "bindSuggestionDiagnostics": undefined,
  "checkJsDirective": undefined,
  "classifiableNames": undefined,
  "commentDirectives": undefined,
  "emitNode": undefined,
  "endFlowNode": undefined,
  "endOfFileToken": {
    "emitNode": undefined,
    "id": 0,
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
      },
      "start": {
        "column": 12,
        "line": 1,
      },
    },
    "range": [
      12,
      12,
    ],
    "type": "TSEndOfFileToken",
  },
  "externalModuleIndicator": undefined,
  "fileName": "text.ts",
  "hasNoDefaultLib": false,
  "id": 0,
  "identifierCount": 2,
  "identifiers": Map {
    "foo" => "foo",
    "T" => "T",
  },
  "impliedNodeFormat": undefined,
  "imports": undefined,
  "isDeclarationFile": false,
  "jsDocParsingMode": 0,
  "languageVariant": 1,
  "languageVersion": 99,
  "libReferenceDirectives": [],
  "lineMap": [
    null,
  ],
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "moduleAugmentations": undefined,
  "nodeCount": 8,
  "original": undefined,
  "originalFileName": "",
  "packageJsonLocations": undefined,
  "packageJsonScope": undefined,
  "parseDiagnostics": [],
  "path": "",
  "pragmas": Map {},
  "range": [
    0,
    12,
  ],
  "referencedFiles": [],
  "resolvedPath": "",
  "scriptKind": 4,
  "setExternalModuleIndicator": [Function],
  "statements": [
    {
      "directive": undefined,
      "expression": {
        "arguments": [],
        "callee": {
          "decorators": [],
          "loc": {
            "end": {
              "column": 7,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "name": "foo",
          "optional": false,
          "range": [
            4,
            7,
          ],
          "type": "Identifier",
          "typeAnnotation": undefined,
        },
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "range": [
          0,
          12,
        ],
        "type": "NewExpression",
        "typeArguments": {
          "loc": {
            "end": {
              "column": 10,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "params": [
            {
              "loc": {
                "end": {
                  "column": 9,
                  "line": 1,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                },
              },
              "range": [
                8,
                9,
              ],
              "type": "TSTypeReference",
              "typeArguments": undefined,
              "typeName": {
                "decorators": [],
                "loc": {
                  "end": {
                    "column": 9,
                    "line": 1,
                  },
                  "start": {
                    "column": 8,
                    "line": 1,
                  },
                },
                "name": "T",
                "optional": false,
                "range": [
                  8,
                  9,
                ],
                "type": "Identifier",
                "typeAnnotation": undefined,
              },
            },
          ],
          "range": [
            7,
            10,
          ],
          "type": "TSTypeParameterInstantiation",
        },
      },
      "loc": {
        "end": {
          "column": 12,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        12,
      ],
      "type": "ExpressionStatement",
    },
  ],
  "symbolCount": 0,
  "text": "new foo<T>()",
  "type": "TSSourceFile",
  "typeReferenceDirectives": [],
}
`;

exports[`convert > deeplyCopy > should convert node correctly 1`] = `
{
  "body": [
    {
      "emitNode": undefined,
      "id": 0,
      "loc": {
        "end": {
          "column": 35,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "name": IdentifierObject {
        "emitNode": undefined,
        "end": 8,
        "escapedText": "foo",
        "flags": 0,
        "flowNode": undefined,
        "id": 0,
        "jsDoc": undefined,
        "kind": undefined,
        "parent": NodeObject {
          "emitNode": undefined,
          "end": 35,
          "flags": 0,
          "id": 0,
          "jsDoc": undefined,
          "kind": undefined,
          "localSymbol": undefined,
          "locals": undefined,
          "modifierFlagsCache": 536870912,
          "modifiers": undefined,
          "name": [Circular],
          "nextContainer": undefined,
          "original": undefined,
          "parent": SourceFileObject {
            "ambientModuleNames": undefined,
            "amdDependencies": [],
            "bindDiagnostics": [],
            "bindSuggestionDiagnostics": undefined,
            "checkJsDirective": undefined,
            "classifiableNames": undefined,
            "commentDirectives": undefined,
            "emitNode": undefined,
            "end": 35,
            "endFlowNode": undefined,
            "endOfFileToken": TokenObject {
              "emitNode": undefined,
              "end": 35,
              "flags": 0,
              "id": 0,
              "kind": undefined,
              "parent": [Circular],
              "pos": 35,
              "transformFlags": 0,
            },
            "externalModuleIndicator": undefined,
            "fileName": "text.ts",
            "flags": 0,
            "hasNoDefaultLib": false,
            "id": 0,
            "identifierCount": 3,
            "identifiers": Map {
              "foo" => "foo",
              "T" => "T",
            },
            "impliedNodeFormat": undefined,
            "imports": undefined,
            "isDeclarationFile": false,
            "jsDocParsingMode": 0,
            "kind": 307,
            "languageVariant": 1,
            "languageVersion": 99,
            "libReferenceDirectives": [],
            "lineMap": [
              0,
            ],
            "locals": undefined,
            "modifierFlagsCache": 536870912,
            "moduleAugmentations": undefined,
            "nextContainer": undefined,
            "nodeCount": 15,
            "original": undefined,
            "originalFileName": "",
            "packageJsonLocations": undefined,
            "packageJsonScope": undefined,
            "parent": undefined,
            "parseDiagnostics": [],
            "path": "",
            "pos": 0,
            "pragmas": Map {},
            "referencedFiles": [],
            "resolvedPath": "",
            "scriptKind": 4,
            "setExternalModuleIndicator": [Function],
            "statements": [
              [Circular],
            ],
            "symbolCount": 0,
            "text": "type foo = ?foo<T> | ?(() => void)?",
            "transformFlags": 1,
            "typeReferenceDirectives": [],
          },
          "pos": 0,
          "symbol": undefined,
          "transformFlags": 1,
          "type": NodeObject {
            "emitNode": undefined,
            "end": 35,
            "flags": 0,
            "id": 0,
            "kind": undefined,
            "modifierFlagsCache": 0,
            "original": undefined,
            "parent": [Circular],
            "pos": 10,
            "postfix": false,
            "transformFlags": 0,
            "type": NodeObject {
              "emitNode": undefined,
              "end": 35,
              "flags": 0,
              "id": 0,
              "kind": undefined,
              "modifierFlagsCache": 0,
              "original": undefined,
              "parent": [Circular],
              "pos": 12,
              "transformFlags": 1,
              "types": [
                NodeObject {
                  "emitNode": undefined,
                  "end": 18,
                  "flags": 0,
                  "id": 0,
                  "kind": undefined,
                  "modifierFlagsCache": 0,
                  "original": undefined,
                  "parent": [Circular],
                  "pos": 12,
                  "transformFlags": 1,
                  "typeArguments": [
                    NodeObject {
                      "emitNode": undefined,
                      "end": 17,
                      "flags": 0,
                      "id": 0,
                      "kind": undefined,
                      "modifierFlagsCache": 0,
                      "original": undefined,
                      "parent": [Circular],
                      "pos": 16,
                      "transformFlags": 1,
                      "typeArguments": undefined,
                      "typeName": IdentifierObject {
                        "emitNode": undefined,
                        "end": 17,
                        "escapedText": "T",
                        "flags": 0,
                        "flowNode": undefined,
                        "id": 0,
                        "jsDoc": undefined,
                        "kind": undefined,
                        "parent": [Circular],
                        "pos": 16,
                        "symbol": undefined,
                        "transformFlags": 0,
                      },
                    },
                  ],
                  "typeName": IdentifierObject {
                    "emitNode": undefined,
                    "end": 15,
                    "escapedText": "foo",
                    "flags": 0,
                    "flowNode": undefined,
                    "id": 0,
                    "jsDoc": undefined,
                    "kind": undefined,
                    "parent": [Circular],
                    "pos": 12,
                    "symbol": undefined,
                    "transformFlags": 0,
                  },
                },
                NodeObject {
                  "emitNode": undefined,
                  "end": 35,
                  "flags": 0,
                  "id": 0,
                  "kind": undefined,
                  "modifierFlagsCache": 0,
                  "original": undefined,
                  "parent": [Circular],
                  "pos": 20,
                  "postfix": false,
                  "transformFlags": 0,
                  "type": NodeObject {
                    "emitNode": undefined,
                    "end": 35,
                    "flags": 0,
                    "id": 0,
                    "kind": undefined,
                    "modifierFlagsCache": 0,
                    "original": undefined,
                    "parent": [Circular],
                    "pos": 22,
                    "postfix": true,
                    "transformFlags": 0,
                    "type": NodeObject {
                      "emitNode": undefined,
                      "end": 34,
                      "flags": 0,
                      "id": 0,
                      "kind": undefined,
                      "modifierFlagsCache": 0,
                      "original": undefined,
                      "parent": [Circular],
                      "pos": 22,
                      "transformFlags": 1,
                      "type": NodeObject {
                        "emitNode": undefined,
                        "end": 33,
                        "flags": 0,
                        "id": 0,
                        "jsDoc": undefined,
                        "kind": undefined,
                        "localSymbol": undefined,
                        "locals": undefined,
                        "modifierFlagsCache": 0,
                        "modifiers": undefined,
                        "nextContainer": undefined,
                        "original": undefined,
                        "parameters": [],
                        "parent": [Circular],
                        "pos": 23,
                        "symbol": undefined,
                        "transformFlags": 1,
                        "type": TokenObject {
                          "emitNode": undefined,
                          "end": 33,
                          "flags": 0,
                          "id": 0,
                          "kind": undefined,
                          "parent": [Circular],
                          "pos": 28,
                          "transformFlags": 1,
                        },
                        "typeArguments": undefined,
                        "typeParameters": undefined,
                      },
                    },
                  },
                },
              ],
            },
          },
          "typeParameters": undefined,
        },
        "pos": 4,
        "symbol": undefined,
        "transformFlags": 0,
      },
      "original": undefined,
      "range": [
        0,
        35,
      ],
      "type": "TSundefined",
      "typeAnnotation": null,
      "typeParameters": null,
    },
  ],
  "comments": undefined,
  "loc": {
    "end": {
      "column": 35,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    35,
  ],
  "sourceType": "script",
  "tokens": undefined,
  "type": "Program",
}
`;

exports[`convert > deeplyCopy > should convert node with decorators correctly 1`] = `
{
  "decorators": [
    {
      "expression": {
        "decorators": [],
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
          },
          "start": {
            "column": 1,
            "line": 1,
          },
        },
        "name": "test",
        "optional": false,
        "range": [
          1,
          5,
        ],
        "type": "Identifier",
        "typeAnnotation": undefined,
      },
      "loc": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        5,
      ],
      "type": "Decorator",
    },
  ],
  "emitNode": undefined,
  "id": 0,
  "loc": {
    "end": {
      "column": 18,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "members": [],
  "name": {
    "decorators": [],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
      },
      "start": {
        "column": 12,
        "line": 1,
      },
    },
    "name": "foo",
    "optional": false,
    "range": [
      12,
      15,
    ],
    "type": "Identifier",
    "typeAnnotation": undefined,
  },
  "original": undefined,
  "range": [
    0,
    18,
  ],
  "type": "TSClassDeclaration",
  "typeParameters": null,
}
`;

exports[`convert > deeplyCopy > should convert node with type arguments correctly 1`] = `
{
  "arguments": [],
  "emitNode": undefined,
  "expression": {
    "decorators": [],
    "loc": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 4,
        "line": 1,
      },
    },
    "name": "foo",
    "optional": false,
    "range": [
      4,
      7,
    ],
    "type": "Identifier",
    "typeAnnotation": undefined,
  },
  "id": 0,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "original": undefined,
  "range": [
    0,
    12,
  ],
  "type": "TSNewExpression",
  "typeArguments": {
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
      },
      "start": {
        "column": 7,
        "line": 1,
      },
    },
    "params": [
      {
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
          },
          "start": {
            "column": 8,
            "line": 1,
          },
        },
        "range": [
          8,
          9,
        ],
        "type": "TSTypeReference",
        "typeArguments": undefined,
        "typeName": {
          "decorators": [],
          "loc": {
            "end": {
              "column": 9,
              "line": 1,
            },
            "start": {
              "column": 8,
              "line": 1,
            },
          },
          "name": "T",
          "optional": false,
          "range": [
            8,
            9,
          ],
          "type": "Identifier",
          "typeAnnotation": undefined,
        },
      },
    ],
    "range": [
      7,
      10,
    ],
    "type": "TSTypeParameterInstantiation",
  },
}
`;

exports[`convert > deeplyCopy > should convert node with type parameters correctly 1`] = `
{
  "emitNode": undefined,
  "id": 0,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "members": [],
  "name": {
    "decorators": [],
    "loc": {
      "end": {
        "column": 9,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "name": "foo",
    "optional": false,
    "range": [
      6,
      9,
    ],
    "type": "Identifier",
    "typeAnnotation": undefined,
  },
  "original": undefined,
  "range": [
    0,
    15,
  ],
  "type": "TSClassDeclaration",
  "typeParameters": {
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
      },
      "start": {
        "column": 9,
        "line": 1,
      },
    },
    "params": [
      {
        "const": false,
        "constraint": undefined,
        "default": undefined,
        "in": false,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "name": {
          "decorators": [],
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 10,
              "line": 1,
            },
          },
          "name": "T",
          "optional": false,
          "range": [
            10,
            11,
          ],
          "type": "Identifier",
          "typeAnnotation": undefined,
        },
        "out": false,
        "range": [
          10,
          11,
        ],
        "type": "TSTypeParameter",
      },
    ],
    "range": [
      9,
      12,
    ],
    "type": "TSTypeParameterDeclaration",
  },
}
`;
